final check, ordering of supps and references

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -50,8 +50,8 @@
 
 \affil[1]{\footnotesize School of Biological Sciences, The University of Queensland, St Lucia, Queensland, Australia. Email: malyonbimler@gmail.com}
 \affil[2]{\footnotesize School of BioSciences, The University of Melbourne, Parkville, Victoria, Australia. Email: margie.mayfield@unimelb.edu.au}
-\affil[3]{\footnotesize School of Natural Resources and the Environment, The University of Arizona, Tucson, USA. Email: tmartyn@arizona.edu }
-\affil[4]{\footnotesize Centre for Integrative Ecology, School of Biological Sciences, University of Canterbury, Christchurch, New Zealand. Email: daniel.stouffer@canterbury.ac.nz }
+\affil[3]{\footnotesize Yale School of the Environment, New Haven, Connecticut, USA. Email: martyn.ecology@gmail.com}
+\affil[4]{\footnotesize Centre for Integrative Ecology, School of Biological Sciences, University of Canterbury, Christchurch, New Zealand. Email: daniel.stouffer@canterbury.ac.nz}
 
 
 
@@ -71,15 +71,15 @@
 
 \noindent
 Number of words - Abstract: 225\\
-Number of words - main text: 5934\\
+Number of words - main text: 5942\\
 3 Figures. in main text.\\
-Number of references: 63\\
+Number of references: 67\\
 
 % Intro = 740
 % Methods = 3192 
 % Results = 979
 % Discussion = 1023
-% 5934 total + 90 header + 468 captions
+% 5934 total + 108 header + 476 captions
 
 \noindent
 \textbf{Keywords:} Annual plants, competition, facilitation, interaction strength, network, non-trophic, population dynamics, species interactions.  
@@ -164,7 +164,7 @@ We developed a joint modelling framework to estimate pairwise interactions which
     \label{meth:id_params}
 
     \paragraph{}
-    A common issue in observational datasets is that some species or elements are not observed interacting with other species or interacting at sufficiently variable densities because data sampling is limited. This can create a situation in which we cannot estimate all potential interaction parameters ($\beta_{i,j}$) in the NDDM specified above, especially for rare species $j$. For an interaction parameter to be \textit{identifiable}, and thus inferrable by the NDDM, data must contain measurements of the performance of $i$ when interacting with $j$ at varying densities. Moreover, the vector of densities of $j$ associated with measurements of focal $i$ must be linearly independent of all other vectors of densities of species interacting with $i$. For example, if two species $a$ and $b$ interact with focal $i$ yet have the same density or equally proportional densities at every measurement, neither $\beta_{i, a}$ nor $\beta_{i, b}$ is inferrable by the NDDM. We define \textit{identifiable} interactions as those which are inferrable following the above assumptions, and \textit{unidentifiable} interactions as those which are not. Given an empirical dataset, we construct a matrix $Q$ of size $s \times t$, with $Q_{i, j} = 1$ if the corresponding $\beta_{i, j}$ parameter is identifiable, and $Q_{i, j} = 0$ if not. We describe our verification of linear independence between vectors of neighbour densities and the construction of the $Q$ matrix in the S. Methods Section \ref{SI:identify} and in the GitHub repository.
+    A common issue in observational datasets is that some species or elements are not observed interacting with other species or interacting at sufficiently variable densities because data sampling is limited. This can create a situation in which we cannot estimate all potential interaction parameters ($\beta_{i,j}$) in the NDDM specified above, especially for rare species $j$. For an interaction parameter to be \textit{identifiable}, and thus inferrable by the NDDM, data must contain measurements of the performance of $i$ when interacting with $j$ at varying densities. Moreover, the vector of densities of $j$ associated with measurements of focal $i$ must be linearly independent of all other vectors of densities of species interacting with $i$. For example, if two species $a$ and $b$ interact with focal $i$ yet have the same density or equally proportional densities at every measurement, neither $\beta_{i, a}$ nor $\beta_{i, b}$ is inferrable by the NDDM. We define \textit{identifiable} interactions as those which are inferrable following the above assumptions, and \textit{unidentifiable} interactions as those which are not. Given an empirical dataset, we construct a matrix $Q$ of size $s \times t$, with $Q_{i, j} = 1$ if the corresponding $\beta_{i, j}$ parameter is identifiable, and $Q_{i, j} = 0$ if not. We describe our verification of linear independence between vectors of neighbour densities and the construction of the $Q$ matrix in the Supplementary Methods \ref{SI:identify} and in the GitHub repository.
     
     \subsection{Unidentifiable parameters and the response--impact model}
     \label{meth:rim}
@@ -238,9 +238,8 @@ We developed a joint modelling framework to estimate pairwise interactions which
     \subsection{Model fitting}
 
         \paragraph{}        
-        We implement the NDDM (Eq.~\ref{nddm}), the RIM (Eq.~\ref{rim}), and the joint model as generalised linear models in STAN \parencite{Carpenter2017}, a Bayesian statistical language. Using STAN requires translating the model formula into the STAN language, setting priors for parameters to be estimated, and using an indexing system to discriminate between identifiable and unidentifiable interactions. We provide a working example of the STAN code as well as R scripts and functions to run and fit the model on a simulated dataset in our GitHub repository \url{https://github.com/malbion/JointModelFramework}.
+        We implement the NDDM (Eq.~\ref{nddm}), the RIM (Eq.~\ref{rim}), and the joint model as generalised linear models in STAN \parencite{Carpenter2017}, using R version 3.6.3 \parencite{R2020} and the rstan package \parencite{Rstan2020}. Using STAN requires translating the model formula into the STAN language, setting priors for parameters to be estimated, and using an indexing system to discriminate between identifiable and unidentifiable interactions. We provide a working example of the STAN code as well as R scripts and functions to run and fit the model on a simulated dataset in our GitHub repository \url{https://github.com/malbion/JointModelFramework}, see Supplementary Methods \ref{SI:modelcode} for additional comments on the code.
         From the model file, only \textbf{the family function}, the link function for $p_k$ and its parameterisation need to be modified in order to apply it to a differently-distributed dataset. Additionally, non-integer measures of performance (e.g.\ biomass) should be redefined as real rather than integers in the data block. In the code given, a negative binomial distribution is used to fit seed production, but a different distribution may be more appropriate when using other measures of performance.   
-
         \paragraph{}
         STAN returns parameters as distributions which maximise the likelihood, and are conditioned by the data and priors. Priors describe the distribution of plausible values which parameters may take. For an introduction to Bayesian inference which relates the use of priors to frequentist hypothesis testing, see \textcite{Ellison1996}. We recommend investigators experiment with setting different informed priors to both improve model convergence and verify the robustness of parameter estimates. The resulting parameters are termed posterior distributions, from which samples are drawn for analysis. Using parameter distributions rather than point estimates allows for easy inclusion of uncertainty, we therefore recommend sampling from each posterior interaction strength distribution to create multiple samples of the community interaction matrix. See \textcite{Ellison2004} for a comprehensive review of parameter estimations.
 
@@ -271,12 +270,10 @@ We developed a joint modelling framework to estimate pairwise interactions which
     \subsection{Case study}
 
        \paragraph{}
-        We applied this framework to an annual wildflower community dataset from Western Australia collected in 2016. This dataset contains over 5000 observations of individual plant seed production from 22 different focal species, and the identity and density of all neighbouring individuals within a 3 to 5 cm radius of the focal individual. \textbf{The environmental heterogeneity of this system is well studied \parencite{Dwyer2015} and we thus know that at the local scales across which this system was surveyed, only soil phosphorous, shade and the presence of woody debris impact on diversity and abundance patterns. To account for this known environmental heterogeneity, we randomly thinned plots to decouple abundance and environment effects (refer to Supplementary Methods for further information).} We used our framework to quantify interactions between these 22 focal species and 52 neighbour species, and derived scaled interaction strengths with a well-supported population dynamics model for annual plants with a seed bank \parencite{Levine2009, Bimler2018} which required experimentally-measured species demographic rates. Viable seed production was used as the measure of performance and modelled with a negative binomial distribution and a log link. Further details on the data, the model fitting and the procedure for deriving scaled interactions from the population dynamics model are available in the Supplementary Methods \ref{SI:casestudy}.
+        We applied this framework to an annual wildflower community dataset from Western Australia collected in 2016. This dataset contains over 5000 observations of individual plant seed production from 22 different focal species, and the identity and density of all neighbouring individuals within a 3 to 5 cm radius of the focal individual. \textbf{The environmental heterogeneity of this system is well studied \parencite{Dwyer2015} and we thus know that at the local scales across which this system was surveyed, only soil phosphorous, shade and the presence of woody debris impact on diversity and abundance patterns. To account for this known environmental heterogeneity, we randomly thinned plots to decouple abundance and environment effects (Supplementary Methods \ref{SI:comdata}).} We used our framework to quantify interactions between these 22 focal species and 52 neighbour species, and derived scaled interaction strengths with a well-supported population dynamics model for annual plants with a seed bank \parencite{Levine2009, Bimler2018} which required experimentally-measured species demographic rates (Supplementary Methods \ref{SI:germination}). Viable seed production was used as the measure of performance and modelled with a negative binomial distribution and a log link. Further details on the procedure for deriving scaled interactions from the population dynamics model are available in the Supplementary Methods \ref{SI:popdyn}.
 
         \paragraph{}
-        \textbf{We fit all three models to the case study data with 4 chains and 7000 iterations, of which the first 5000 were discarded. All parameters for the NDDM-only model converged well; however, some of the $\gamma$ and $B$ parameters for the RIM-only and joint models received $\hat{R}$ values over $1.01$. High $\hat{R}$ values without other warnings are commonly associated with posteriors that are highly correlated and whose geometry is hence difficult to traverse \parencite{Team2022}. The impact of such ``problematic geometries'' however, is dependent on the data at hand, as evidenced by reliable convergence of all models on the simulated data. We explain why this may be the case for the $r$ and $e$ parameters in our case study and how this affects the $\hat{R}$ of $\gamma$ and $B$ in the Supplementary Methods \ref{SI:convergence}. By comparing the fits across models and the resulting posterior distributions of model parameters, we remained comfortable using the joint model estimates returned by multiple chains to further study the interactions underlying the case study data. Supplementary Methods \ref{SI:convergence} goes into further detail in this regard and, in particular, shows how the posterior intervals of the model parameters remain informative despite high $\hat{R}$ values.}
-
-
+        \textbf{We fit all three models to the case study data with 4 chains and 7000 iterations, of which the first 5000 were discarded. All parameters for the NDDM-only model converged well; however, some of the $\gamma$ and $B$ parameters for the RIM-only and joint models received $\hat{R}$ values over $1.01$. High $\hat{R}$ values without other warnings are commonly associated with posteriors that are highly correlated and whose geometry is hence difficult to traverse \parencite{Team2022}. The impact of such ``problematic geometries'' however, is dependent on the data at hand, as evidenced by reliable convergence of all models on the simulated data. We explain why this may be the case for the $r$ and $e$ parameters in our case study and how this affects the $\hat{R}$ of $\gamma$ and $B$ in the Supplementary Methods \ref{SI:convergence}. By comparing the fits across models and the resulting posterior distributions of model parameters, we remained comfortable using the joint model estimates returned by multiple chains to further study the interactions underlying the case study data. Supplementary Methods \ref{SI:convergence} goes into further detail in this regard and, in particular, shows how the posterior intervals of the model parameters remain informative despite high $\hat{R}$ values.} Model parameters were sampled 1000 times from the 80\% posterior confidence intervals to construct our parameter estimates. We then applied bootstrap sampling from each resulting interaction strength distribution to create 1000 samples of the community interaction network.
 
 \section{Results}
     
@@ -287,7 +284,7 @@ We developed a joint modelling framework to estimate pairwise interactions which
     \subsection{Case study results}
 
     \paragraph{}
-    The model returned estimates for all 1144 interactions between 22 focal species and 52 interacting species, of which 56.7\% were identifiable and estimated by the NDDM. When accounting for interactions between focal species only, 82.0\% of interactions were identifiable. We conducted a posterior predictive check comparing simulated performance data from the joint model to observed values (Fig. \ref{fig:ppcheckmu2}). This is especially important for verifying that the appropriate distribution and link function are being used for the data at hand. The joint model also returns simulated performance data for the RIM only, which we also checked visually (Supplementary Results \ref{SI:results} Fig. \ref{fig:ppcheckmu1}). Model parameters were sampled 1000 times from the 80\% posterior confidence intervals returned by STAN to construct our parameter estimates. \textbf{Interaction estimates between focal species were scaled according to the annual plant population model (Supplementary Methods \ref{SI:casestudy}) into interaction strengths affecting population growth,} and we sampled from each resulting interaction strength distributions to create 1000 samples of the scaled community interaction matrix.
+    The model returned estimates for all 1144 interactions between 22 focal species and 52 interacting species, of which 56.7\% were identifiable and estimated by the NDDM. When accounting for interactions between focal species only, 82.0\% of interactions were identifiable. We conducted a posterior predictive check comparing simulated performance data from the joint model to observed values (Fig. \ref{fig:ppcheckmu2}). This is especially important for verifying that the appropriate distribution and link function are being used for the data at hand. The joint model also returns simulated performance data for the RIM only, which we also checked visually (Supplementary Results \ref{SI:results} Fig. \ref{fig:ppcheckmu1}). Model parameters were sampled 1000 times from the 80\% posterior confidence intervals returned by STAN to construct our parameter estimates. \textbf{Interaction estimates between focal species were scaled according to the annual plant population model (Supplementary Methods \ref{SI:popdyn}) into interaction strengths affecting population growth,} and we sampled from each resulting interaction strength distributions to create 1000 samples of the scaled community interaction matrix.
 
     \paragraph{}
     For our case study, the resulting scaled community interaction matrix was non-symmetrical and included both positive (competitive) and negative (facilitative) values, as shown in Figs. \ref{fig:netwks}.A \& B. Here we represent the community matrix as a network between all 22 focal species, taking the median value of each scaled interaction across all samples. Overall, the median strength for 55.8\% of focal $\times$ focal interactions were competitive, making competition the dominant interaction type. The median of 44.2\% of focal $\times$ focal interactions, however, were facilitative. As a result, the median of 47.6\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. Furthermore, the elements of the diagonal (the effect of a species on itself) were able to be estimated, which allows us to quantify how much a species regulates its own performance. \textbf{Median intraspecific interaction strength was competitive for $13$ focal species (59.1\%), and facilitative for the remaining $9$ (40.9\%)}. For 11 of our 22 focal species, the scaled distributions of intraspecific effects did not overlap with $0$, suggesting that individuals of those species have a non-trivial effect on other individuals of the same species. \textbf{When considering interspecific interactions with neighbouring focal species, the proportion which did not overlap with $0$ dropped to 25.5\%.}
@@ -376,7 +373,7 @@ The authors declare no competing interests.
 
     \addtocounter{figure}{-1}
     \begin{figure} [t!]
-        \caption{For all graphs, diamonds are species medians across all network samples, black lines cover the 50\% quantile and grey dots indicate the full range of values as calculated from 1000 sampled networks. Note that only focal $x$ focal interactions are included. The shaded part of the graphs show facilitative (negative) interactions. Dashed lines represent the median value for all focals. Coloured triangles indicate the species referred to in the main text for each of the ecological questions associated with (A), (B) and (C). \\
+        \caption{For all graphs, diamonds are species medians across all network samples, black lines cover the 50\% quantile and grey dots indicate the full range of values as calculated from 1000 sampled networks. Note that only focal x focal interactions are included. The shaded part of the graphs show facilitative (negative) interactions. Dashed lines represent the median value for all focals. Coloured triangles indicate the species referred to in the main text for each of the ecological questions associated with (A), (B) and (C). \\
         In (A), the x-axis shows the strength of scaled intraspecific interactions, that is how strongly a focal species interacts with itself, plotted against a focal species' total log abundance (y-axis). Values above $0$ indicate competition, and values less than $0$ indicate facilitation.  The two most abundant natives, \textit{Velleia rosea} (VERO) and \textit{Podolepsis canescens} (POCA) (purple triangles), do not compete with themselves any more or less strongly than the median for all species in the system (dashed line). \\
         (B) shows the sum of interaction effects of focal species on neighbours (x-axis) against the focal species' total log abundance (y-axis). On the x-axis, values greater than $0$ indicate that a focal species has an overall competitive effect on neighbours, and values less than $0$ indicate that it has an overall facilitative effect. Green triangles identifies a species with low overall abundance but strong competitive effects on neighbours: \textit{Gilberta tenuifolia} (GITE). \\
         (C) decomposes a focal species' net interaction strength into its competitive effects (x-axis) and facilitative effects (y-axis). Red triangles show the exotic species \textit{Hypochaeris glabra} (HYPO), \textit{Arctotheca calendula} (ARCA) and \textit{Pentameris aroides} (PEAI). The light grey diagonal shows where x = y, species above that line have an overall facilitative effect on other species whereas those below that line have an overall competitive effect. \textbf{Points capturing the effects of \textit{H. glabra} on neighbours are spread much further apart than for any other species, this is largely driven by it's high germination rate which magnifies interaction effects when those are scaled according to the population dynamics model (see Supplementary Methods \ref{SI:popdyn}).}} 
