--- a/4.mss/tex/supps.tex
+++ b/4.mss/tex/supps.tex
@@ -19,7 +19,7 @@
     
 
     We make the several observations in addition to comments in the code. Firstly, identifiable interactions (beta\_ij in the code) are defined as a vector, which must then be matched to their correct position in the interaction matrix. This is the role of the icol and irow vectors defined in the data block. Our Github repository also contains the data\_prep.R file, which will show how to create these vectors from appropriate input data. 
-    \textbf{Secondly, the code is written to use a negative binomial function (lines 96 and 98, and again 112 and 114) with an exponential inverse link (lines 64 and 77), the latter is equivalent to a log link function. These lines, along with the dispersion parameter (lines 31 and 86, and wherever the negative binomial function is used) must all be modified if a different family and link function are to be used.}
+    \textbf{Secondly, the joint\_model.stan code is written to use a negative binomial function (lines 96 and 98, and again 112 and 114) with an exponential inverse link (lines 64 and 77), the latter is equivalent to a log link function. These lines, along with the dispersion parameter (lines 31 and 86, and wherever the negative binomial function is used) must all be modified if a different family and link function are to be used.}
     Thirdly, we impose the following constraints to improve convergence, avoid over-parameterisation and maintain identifiability of our parameters $r_i$ and $e_j$ \parencite{Huber2004, Kidzinski2020, Niku2021}. \textbf{We define both the effect and the response parameters as unit vectors, which means we only require T-1 degrees of freedom (where T is the total number of neighbour elements) to estimate all effect values and S-1 degrees of freedom (where S is the total number of focal elements) to estimate all response values}. This loss of a degree of freedom arises from the fact that the matrix whose $i,j$-elements are all products $r_i \times e_j$ is of rank 1. Though both latent variables $r_i$ and $e_j$ may be susceptible to sign switching when running the model on multiple chains, estimates for identifiable and unidentifiable interactions should not be affected. \textbf{All $r_i$ and $e_j$'s are multiplied by a a unique, positive constrained $weight$ parameter which controls the average strength of the resulting interactions.}
 
 
@@ -61,10 +61,11 @@
         \label{fig:gamma_all}
     \end{figure}
 
-    \subsection{Case study Methods}
+    \subsection{Case study Data}
     \label{SI:casestudy}
 
         \subsubsection{Community data}
+        \label{SI:comdata}
 
         \paragraph{}
         We applied this framework to annual wildflower community dataset from Western Australia. This system is a diverse and well-studied community of annual plants which germinate, grow, set seed and die within approximately 4 months every year. Individual fecundity data were collected in 2016, when 100 50 x 50 cm plots established in the understory of West Perenjori Reserve (29$^o$28'01.3"S 116$^o$12'21.6"E) were monitored over the length of the full field season. The resulting dataset includes between 29 to over 1000 counts of individual plant seed production from 22 different focal species (with a median of 108 observations per species), in addition to the identity and densities of all neighbouring individuals within the interaction neighbourhood of each focal plant. Interaction neighbourhoods varied in radius from 3 to 5 cm depending on the size of the focal species \parencite{Martyn2020}. Total neighbourhood diversity was 71 wildflower species, 19 of which were recorded fewer than 10 times across the whole dataset. The species-specific effects of this latter group of species on focals were deemed negligible due to their extremely low density, they were thus grouped into an 'other' category and their effects on focals averaged. This resulted in 53 potential neighbour identities. \textbf{Plots were randomly positioned across the reserve to capture natural environmental variation in the system.  Major factors known to impact plant composition and within species abundances are soil P concentrations, shade the presence of woody debris \parencite{Dwyer2015}. Natural levels of soil P are very low in this system with elevated P concentrations occurring predominantly on the edge of the reserve near agricultural fields that use P fertiliser. All study plots were placed far from reserve edges to avoid artificially elevated levels of P, which are easy to detect due to an association between high P levels and extensive exotic grass abundances, which are largely absent from the core reserve where this study was conducted. Thus, environmental variation captured by this dataset reflects natural variation in tree cover, soil nutrients and woody debris. To account for confounding effects between plot location and plant density, half of all plots were thinned (a quarter to 60\% abundance and a quarter to 30\%). Thinning did not target any particular species.} 
@@ -75,16 +76,34 @@
         \paragraph{} 
         We required species demographic rates (seed survival and germination) in order to scale model interaction estimates into interaction strengths. Species demographic rates for 16 of our focal species were estimated from a database of field experiments carried out between 2016 and 2019 where seedbags were placed in the field to estimate germination rates, and ungerminated seeds were evaluated in the lab for survivability.  The remaining species were assigned mean demographic rates from these experiments. Further details on the methods used for collecting those seed rates are available in section \ref{SI:germination}.
 
-        \subsubsection{Model fitting}
+
+        \subsubsection{Seed germination and survival data}
+        \label{SI:germination}
 
         \paragraph{}
-        We fit the model using R version 3.6.3, STAN and the rstan package \parencite{R2020, Carpenter2017, Rstan2020}. Estimates of seed production were fit with a negative binomial distribution. The model was run with 1 chain of 10000 iterations, discarding the first 5000. Models were checked for convergence using the geweke.diag() function from the coda package \parencite{Plummer2006} and traceplots were visually inspected to verify good chain behaviour. Model parameters were sampled 1000 times from the 80\% posterior confidence intervals to construct our parameter estimates. We then applied bootstrap sampling from each resulting interaction strength distribution to create 1000 samples of the community interaction network.
+        Seed demographic rates were collected from a set of field experiments conducted by T. Martyn, M. Raymundo and I. Towers at Perenjori reserve between 2015 and 2019. Experiments differed both in the methods and in which focal species were included in ways which are detailed further below, such that each focal species had a different number of replicates across all experiments. Given how much seed rates estimates have been found to vary within species and according to a range of both individual and environmental factors, we chose to average results from these multiple experiments for each focal species in order to provide a point estimate which captures a wide range of conditions under which seeds may grow. For those species which did not have any field estimates of seed rates (\textit{Austrostipa elegantissima}, \textit{Erodium sp.}, \textit{Petrorhagia dubia}) or seed survival rate (\textit{Gilberta tenuifolia}), no replication (\textit{Waitzia acuminata}) or an unrealistically low estimate of germination rate (\textit{Goodenia pusilliflora}), we substituted the community mean instead. 
 
-        \subsubsection{A model for annual plant population dynamics}
+        \paragraph{}
+        For each experiment, mature seeds were collected at the end of the growing season (September - October) from multiple populations of each focal species located throughout the reserve. Immature or damaged seeds were not included, and collected seed was homogenised for each focal species to eliminate bias associated with local adaptation within populations. Germination rate was estimated by planting seeds in the field along gradients of soil phosphorus, woody canopy cover and herbaceous vegetation density and either directly counting the number of seeds which had germinated or comparing recruitment rates to unplanted plots after a sufficient amount of time had elapsed. Seeds were planted during late-September to mid-October, mimicking natural seed dispersal timing for wildflowers in the area. Seed survival rates were estimated using either the remaining seeds or a separate batch of seeds and assessing viability of the seeds using tetrazolium staining. 
+
+
+        \paragraph{T. Martyn experiment:}
+        For 19 focal species (the full species list excluding \textit{A. elegantissima}, \textit{P. dubia} and \textit{G. tenuifolia}), germination bags containing 20 seeds each were planted in the field in 2016 across multiple areas of Perenjori Reserve. Out of the 30 bags, 19 were collected in 2017 and the remaining were collected in 2018. Due to a severe drought in 2017, half of the bags collected that year were watered during the field season and prior to collection. Germination bags were then brought back to the Mayfield Lab facilities at the University of Queensland, Brisbane, and seeds extracted. Seeds were examined for signs of germination in the field (broken or empty seed coat) and those remaining were placed in germination trays and a germination chamber to mimic light and temperature conditions conducive to germination. Trays were watered with Gibberellic acid once to twice a week and seedlings were recorded and removed until no more seedlings emerged. Remaining, ungerminated seeds were then assessed as dead (mouldy) or potentially viable. The remaining potentially viable seeds were assessed for viability using tetrazolium staining, contributing to our estimates of seed survival rates. For this procedure, embryos in each seed were exposed by either removing the seed coat or by creating a thin cut along the seed coat. The exposed embryos were then placed on a six-well germination plate and 2 ml of 0.25\% Tetrazolium solution was added to each well to stain the embryos, before covering them and storing them at 25$^{\circ}$C overnight. To check for staining, embryos were dissected under a dissecting microscope. Viable seeds showed a dark pink embryo while non-viable seeds did not stain or were stained in a splotchy way.
+
+
+        \paragraph{M. Raymundo experiment:}
+        This experiment was carried out on the focal species \textit{H. glutinosum}, \textit{T. cyanopetala}, \textit{T. ornata} and \textit{V. rosea} from 2015 to 2017. However, a severe drought in 2017 made the second round of data collection impossible and thus we only include results for 2016 here. Ten plots were established measuring 0.5 m x 0.5 m at each of three sites in Perenjori Reserve for a total of 30 plots. Each plot was divided into 25 0.1 m x 0.1 m subplots and focal species were randomly assigned a subplot in each plot. Thirty seeds of each focal species were planted in the designated subplot in late September 2015 and a plastic ring 10 cm in diameter and 1 cm high was placed in each subplot where seeds were added to limit seed movement among subplots. Another five subplots were assigned plastic rings to serve as controls for the effect of the rings on non-experimental communities. The remaining 15 subplots served as controls where no seeds or rings were added allowing for recruitment from either natural dispersal or from the seed bank. Blocks were placed in such a way as to span shaded and open areas, bare ground and dense herbaceous vegetation, and areas with native dominated and exotic dominated assemblages. Before implementing the experiment in 2015, plots were surveyed to record the number and identity of all adult plants in each subplot. Due to the randomisation of seed addition into subplots, some subplots had focal species already in them. As all focal species were common to this reserve, it is also likely that seeds for all species were in the seed banks in at least some subplots. There was no way to determine this in advance, though when adult individuals of a focal species were present in a subplot prior to the implementation of our experiment, we expected that some seedlings in the following year would be from the seedbank as well as our planted seeds and looked for evidence of this (more than 30 individuals) in data from 2016. We therefore compared average densities of successful focal recruits and those which emerged in situ between sown, control, and ringed subplots to assess seed limitation and germination rate. To measure seed survival rates, thirty seeds of each focal species were also assessed for viability using tetrazolium staining using the same procedure as for the T. Martyn experiment. 
+
+        \paragraph{I. Towers experiment: }
+        This experiment was carried out on the focal species \textit{A. calendula}, \textit{G. berardiana}, \textit{H. glutinosum}, \textit{H. glabra},\textit{P. aroides}, \textit{P. debilis}, \textit{P. canescens}, \textit{T. cyanopetala}, \textit{T. ornata}, \textit{V. rosea} and \textit{W. acuminata} in 2018 and 2019. Pairs of free-draining germination trays were deployed across a gradient of canopy cover in mid-October of both years, filled with soil, which had either been collected from the field and heat-sterilised to render pre-existing seeds nonviable (2019), or simply collected from the roadside (2018). Each germination tray consisted of 24 cells, with two cells randomly assigned to each focal species. In each cell, 15 seeds of the designated focal species were broadly distributed and lightly misted with water to facilitate seed-soil contact and minimise removal by wind. Trays placed in 2018 used seeds collected at the end of the 2017 growing season and dry after-ripened at 60$^{\circ}$C for a month before being stored in cool, dry conditions at the University of Queensland. Seeds planted in 2019 were collected at the end of the 2018 growing season and were placed directly from the field into the germination trays. To re-establish microbial communities for those trays where the soil had been heat-treated, seeds were lightly covered with a small amount of untreated soil collected from the site in which they were buried. Untreated soil was collected from directly underneath coarse woody debris in patches where it was present as prior research in this system has shown that the effect of coarse woody debris on plant performance is partially attributable to debris-specific soil microbial communities (A. Pastore unpublished data). Some of the trays received the additions of leaf litter, but the results of this treatment were not included for the seed rates used in this study. Seed germination rate was measured by counting the number of seedlings which emerged in the field, but seed survival rate was not calculated in this experiment.
+
+
+
+        \subsection{A model for annual plant population dynamics}
         \label{SI:popdyn}
 
         \paragraph{}
-        The above model framework returns species-specific estimates of intrinsic fitness ($\gamma_i$), as well as as a focal species $\times$ neighbour species composite matrix $B$ of identifiable ($\beta_{i, j}$) and unidentifiable ($r_{i} e_j$) interaction estimates which quantify the effects of one neighbour $j$ on the intrinsic fitness of a focal species $i$. Though useful as they are, these estimates can lead to a wider range of potential applications when integrated into models of population dynamics. For example, we might be more interested in the effects of neighbours on the density or growth rate of a focal species rather than on its proxy for lifetime reproductive success. Importantly, it is necessary to specify a model describing population dynamics in order to draw conclusions about the effects of interactions and network structure on the maintenance of community diversity and stability. 
+        The joint model framework returns species-specific estimates of intrinsic fitness ($\gamma_i$), as well as as a focal species $\times$ neighbour species composite matrix $B$ of identifiable ($\beta_{i, j}$) and unidentifiable ($r_{i} e_j$) interaction estimates which quantify the effects of one neighbour $j$ on the intrinsic fitness of a focal species $i$. Though useful as they are, these estimates can lead to a wider range of potential applications when integrated into models of population dynamics. For example, we might be more interested in the effects of neighbours on the density or growth rate of a focal species rather than on its proxy for lifetime reproductive success. Importantly, it is necessary to specify a model describing population dynamics in order to draw conclusions about the effects of interactions and network structure on the maintenance of community diversity and stability. 
 
         \paragraph{} 
         We defined the following model for annual plants with a seed bank \parencite{Levine2009, Mayfield2017, Bimler2018} which describes the rate of change in a focal species' \textit{i} abundance of seeds in a seed bank from one year to the next: 
@@ -132,28 +151,8 @@
         \label{alphaprime}
         \end{equation}
 
-        As we show here, the exact form of the rescaled interactions as well as intrinsic fitness can therefore vary depending on the specific population dynamic model applied and may include other demographic rates which reflect species-level differences in growth and mortality. \textit{In our case study, we were only able to scale interactions between pairs of focal species because we required demographic rates for both species involved in the interaction (Eq. \ref{alphaprime}) and rates for non-focal species were not available.} Because intrinsic fitness is estimated by the model framework and not directly observed, we used the mean of the $\gamma_{i}$ posterior distribution returned by our model in our scaling of the interaction coefficients.
+        As we show here, the exact form of the rescaled interactions as well as intrinsic fitness can therefore vary depending on the specific population dynamic model applied and may include other demographic rates which reflect species-level differences in growth and mortality. \textbf{In our case study, we were only able to scale interactions between pairs of focal species because we required demographic rates for both species involved in the interaction (Eq. \ref{alphaprime}) and rates for non-focal species were not available.} Because intrinsic fitness is estimated by the model framework and not directly observed, we used the mean of the $\gamma_{i}$ posterior distribution returned by our model in our scaling of the interaction coefficients.
 
-
-        \subsubsection{Seed germination and survival data}
-        \label{SI:germination}
-
-        \paragraph{}
-        Seed demographic rates were collected from a set of field experiments conducted by T. Martyn, M. Raymundo and I. Towers at Perenjori reserve between 2015 and 2019. Experiments differed both in the methods and in which focal species were included in ways which are detailed further below, such that each focal species had a different number of replicates across all experiments. Given how much seed rates estimates have been found to vary within species and according to a range of both individual and environmental factors, we chose to average results from these multiple experiments for each focal species in order to provide a point estimate which captures a wide range of conditions under which seeds may grow. For those species which did not have any field estimates of seed rates (\textit{Austrostipa elegantissima}, \textit{Erodium sp.}, \textit{Petrorhagia dubia}) or seed survival rate (\textit{Gilberta tenuifolia}), no replication (\textit{Waitzia acuminata}) or an unrealistically low estimate of germination rate (\textit{Goodenia pusilliflora}), we substituted the community mean instead. 
-
-        \paragraph{}
-        For each experiment, mature seeds were collected at the end of the growing season (September - October) from multiple populations of each focal species located throughout the reserve. Immature or damaged seeds were not included, and collected seed was homogenised for each focal species to eliminate bias associated with local adaptation within populations. Germination rate was estimated by planting seeds in the field along gradients of soil phosphorus, woody canopy cover and herbaceous vegetation density and either directly counting the number of seeds which had germinated or comparing recruitment rates to unplanted plots after a sufficient amount of time had elapsed. Seeds were planted during late-September to mid-October, mimicking natural seed dispersal timing for wildflowers in the area. Seed survival rates were estimated using either the remaining seeds or a separate batch of seeds and assessing viability of the seeds using tetrazolium staining. 
-
-
-        \paragraph{T. Martyn experiment:}
-        For 19 focal species (the full species list excluding \textit{A. elegantissima}, \textit{P. dubia} and \textit{G. tenuifolia}), germination bags containing 20 seeds each were planted in the field in 2016 across multiple areas of Perenjori Reserve. Out of the 30 bags, 19 were collected in 2017 and the remaining were collected in 2018. Due to a severe drought in 2017, half of the bags collected that year were watered during the field season and prior to collection. Germination bags were then brought back to the Mayfield Lab facilities at the University of Queensland, Brisbane, and seeds extracted. Seeds were examined for signs of germination in the field (broken or empty seed coat) and those remaining were placed in germination trays and a germination chamber to mimic light and temperature conditions conducive to germination. Trays were watered with Gibberellic acid once to twice a week and seedlings were recorded and removed until no more seedlings emerged. Remaining, ungerminated seeds were then assessed as dead (mouldy) or potentially viable. The remaining potentially viable seeds were assessed for viability using tetrazolium staining, contributing to our estimates of seed survival rates. For this procedure, embryos in each seed were exposed by either removing the seed coat or by creating a thin cut along the seed coat. The exposed embryos were then placed on a six-well germination plate and 2 ml of 0.25\% Tetrazolium solution was added to each well to stain the embryos, before covering them and storing them at 25$^{\circ}$C overnight. To check for staining, embryos were dissected under a dissecting microscope. Viable seeds showed a dark pink embryo while non-viable seeds did not stain or were stained in a splotchy way.
-
-
-        \paragraph{M. Raymundo experiment:}
-        This experiment was carried out on the focal species \textit{H. glutinosum}, \textit{T. cyanopetala}, \textit{T. ornata} and \textit{V. rosea} from 2015 to 2017. However, a severe drought in 2017 made the second round of data collection impossible and thus we only include results for 2016 here. Ten plots were established measuring 0.5 m x 0.5 m at each of three sites in Perenjori Reserve for a total of 30 plots. Each plot was divided into 25 0.1 m x 0.1 m subplots and focal species were randomly assigned a subplot in each plot. Thirty seeds of each focal species were planted in the designated subplot in late September 2015 and a plastic ring 10 cm in diameter and 1 cm high was placed in each subplot where seeds were added to limit seed movement among subplots. Another five subplots were assigned plastic rings to serve as controls for the effect of the rings on non-experimental communities. The remaining 15 subplots served as controls where no seeds or rings were added allowing for recruitment from either natural dispersal or from the seed bank. Blocks were placed in such a way as to span shaded and open areas, bare ground and dense herbaceous vegetation, and areas with native dominated and exotic dominated assemblages. Before implementing the experiment in 2015, plots were surveyed to record the number and identity of all adult plants in each subplot. Due to the randomisation of seed addition into subplots, some subplots had focal species already in them. As all focal species were common to this reserve, it is also likely that seeds for all species were in the seed banks in at least some subplots. There was no way to determine this in advance, though when adult individuals of a focal species were present in a subplot prior to the implementation of our experiment, we expected that some seedlings in the following year would be from the seedbank as well as our planted seeds and looked for evidence of this (more than 30 individuals) in data from 2016. We therefore compared average densities of successful focal recruits and those which emerged in situ between sown, control, and ringed subplots to assess seed limitation and germination rate. To measure seed survival rates, thirty seeds of each focal species were also assessed for viability using tetrazolium staining using the same procedure as for the T. Martyn experiment. 
-
-        \paragraph{I. Towers experiment: }
-        This experiment was carried out on the focal species \textit{A. calendula}, \textit{G. berardiana}, \textit{H. glutinosum}, \textit{H. glabra},\textit{P. aroides}, \textit{P. debilis}, \textit{P. canescens}, \textit{T. cyanopetala}, \textit{T. ornata}, \textit{V. rosea} and \textit{W. acuminata} in 2018 and 2019. Pairs of free-draining germination trays were deployed across a gradient of canopy cover in mid-October of both years, filled with soil, which had either been collected from the field and heat-sterilised to render pre-existing seeds nonviable (2019), or simply collected from the roadside (2018). Each germination tray consisted of 24 cells, with two cells randomly assigned to each focal species. In each cell, 15 seeds of the designated focal species were broadly distributed and lightly misted with water to facilitate seed-soil contact and minimise removal by wind. Trays placed in 2018 used seeds collected at the end of the 2017 growing season and dry after-ripened at 60$^{\circ}$C for a month before being stored in cool, dry conditions at the University of Queensland. Seeds planted in 2019 were collected at the end of the 2018 growing season and were placed directly from the field into the germination trays. To re-establish microbial communities for those trays where the soil had been heat-treated, seeds were lightly covered with a small amount of untreated soil collected from the site in which they were buried. Untreated soil was collected from directly underneath coarse woody debris in patches where it was present as prior research in this system has shown that the effect of coarse woody debris on plant performance is partially attributable to debris-specific soil microbial communities (A. Pastore unpublished data). Some of the trays received the additions of leaf litter, but the results of this treatment were not included for the seed rates used in this study. Seed germination rate was measured by counting the number of seedlings which emerged in the field, but seed survival rate was not calculated in this experiment.
 
 
         %\subsection{References}
