affilitation and author contributions

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -48,7 +48,7 @@
 \author[3]{\small Trace E. Martyn}
 \author[4]{\small Daniel B. Stouffer}
 
-\affil[1]{\footnotesize School of Biological Sciences, The University of Queensland, St Lucia, Queensland, Australia. Email: malyonbimler@gmail.com}
+\affil[1]{\footnotesize School of BioSciences, The University of Melbourne, Parkville, Victoria, Australia. Email: malyon.bimler@unimelb.edu.au}
 \affil[2]{\footnotesize School of BioSciences, The University of Melbourne, Parkville, Victoria, Australia. Email: margie.mayfield@unimelb.edu.au}
 \affil[3]{\footnotesize Yale School of the Environment, New Haven, Connecticut, USA. Email: martyn.ecology@gmail.com}
 \affil[4]{\footnotesize Centre for Integrative Ecology, School of Biological Sciences, University of Canterbury, Christchurch, New Zealand. Email: daniel.stouffer@canterbury.ac.nz}
@@ -75,18 +75,10 @@ Number of words - main text: 5942\\
 3 Figures. in main text.\\
 Number of references: 67\\
 
-% Intro = 740
-% Methods = 3192 
-% Results = 979
-% Discussion = 1023
-% 5934 total + 108 header + 476 captions
+% 5942 total + 108 header + 476 captions
 
 \noindent
 \textbf{Keywords:} Annual plants, competition, facilitation, interaction strength, network, non-trophic, population dynamics, species interactions.  
-
-\section*{Author contributions}
-
-M.D.B. designed the methodology, carried out analyses and led the drafting of the manuscript. M.M.M. helped design the field study, collected data, contributed to the interpretation of analyses and critically revised the manuscript. T.E.M. led the field study and data collection. D.B.S. helped design the methodology, interpret analyses and critically revised the manuscript. 
 
 \section*{Data accessibility}
 
@@ -330,10 +322,13 @@ We developed a joint modelling framework to estimate pairwise interactions which
 We thank M. Raymundo \& I. Towers for the seed rate data used in this paper, C. Bowler, T. Britton, and J. Ikin for their work in sample processing for this data set, as well as Rob Freckleton, Jacopo Grilli, Stefano Allesina and two anonymous reviewers for insightful comments on the manuscript. We also wish to acknowledge the Traditional Custodians of the Country from which the case study data was collected, the Yamatji People, as well as those of the land on which this research was conceived of, carried out, and written, the Jagera and Turrbal Peoples. This work was made possible by funding awarded to M.M.M. (DP170100837) by the Australian Research Council. D.B.S. is grateful for the support of the Marsden Fund Council, from New Zealand Government funding (grant 16-UOC-008).
 
 
-\section*{Competing interests}
+\section*{Conflict of Interest}
 
 The authors declare no competing interests. 
 
+\section*{Author contributions}
+
+Malyon D. Bimler designed the methodology, carried out analyses and led the drafting of the manuscript. Margie M. Mayfield helped design the field study, collected data, contributed to the interpretation of analyses and critically revised the manuscript. Trace E. Martyn led the field study and data collection. Daniel B. Stouffer helped design the methodology, interpret analyses and critically revised the manuscript. 
 
 \newpage
 
